Close button alignment fix

--- a/src/components/Onboarding/style.module.less
+++ b/src/components/Onboarding/style.module.less
@@ -142,7 +142,7 @@
 
 .closeButtonBreadcrumb {
   width: 0.75rem;
-  height: 0.75rem;
+  height: 1rem;
   margin-left: 45%;
   cursor: pointer;
   fill: @white;
